syntax = "proto3";

option csharp_namespace = "WhatIsGrpc.Services";

package WeatherStations;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
  rpc GetWeatherStream (WeatherRequest) returns (stream WeatherResponse);
  rpc GetWeatherReadings (WeatherRequest) returns (Readings);
}

message Readings {
  repeated WeatherResponse theReadings = 1;
}

message WeatherRequest {
  int32 stationId = 1;
} 

message WeatherResponse {
  float temperature = 1;
  float windSpeed = 2;
  float rainAmount = 3;
}


